# crawler

./: .gitignore  README.md  pyproject.toml
GeneralCrawler/: run_spider.py
GeneralCrawler/Filebase/: 0.html  __init__.txt
GeneralCrawler/GeneralCrawler/: database.py  items.py  middlewares.py  pipelines.py  settings.py
GeneralCrawler/GeneralCrawler/spiders/: general.py
StackOverflow/: stackoverflow.txt
StackOverflow/StackOverflow/: items.py  pipelines.py  settings.py
StackOverflow/StackOverflow/spiders/: Stack.py
