[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["崔顺杰 <11680384+cui-shunjie12@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
